--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "hoek": "^2.12.0",
     "lodash": "^3.8.0",
     "minimist": "^1.1.1",
-    "require-dir": "^0.3.0"
+    "require-dir": "^0.3.0",
+    "debug": "^2.1.3"
   }
 }
