--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "command line runner",
   "main": "index.js",
   "scripts": {
-    "test": "grunt test"
+    "test": "node ./node_modules/mocha/bin/mocha"
   },
   "keywords": [
     "cli",
@@ -23,5 +23,9 @@
     "minimist": "^1.1.1",
     "require-dir": "^0.3.0",
     "debug": "^2.1.3"
+  },
+  "devDependencies": {
+    "chai": "^2.3.0",
+    "mocha": "^2.1.0"
   }
 }
