--- a/package.json
+++ b/package.json
@@ -18,14 +18,18 @@
   "license": "ISC",
   "dependencies": {
     "chalk": "^1.0.0",
+    "debug": "^2.1.3",
+    "deep-dot": "0.0.2",
     "hoek": "^2.12.0",
     "lodash": "^3.8.0",
     "minimist": "^1.1.1",
-    "require-dir": "^0.3.0",
-    "debug": "^2.1.3"
+    "require-dir": "^0.3.0"
   },
   "devDependencies": {
     "chai": "^2.3.0",
-    "mocha": "^2.1.0"
+    "chai-as-promised": "^5.0.0",
+    "mocha": "^2.1.0",
+    "sinon": "^1.14.1",
+    "sinon-chai": "^2.7.0"
   }
 }
