--- a/package.json
+++ b/package.json
@@ -30,10 +30,13 @@
     "deep-dot": "0.0.2",
     "figlet": "^1.1.0",
     "fluid": "^0.1.3",
-    "hoek": "^2.12.0",
+    "hoek": "^2.13.0",
+    "jsonfile": "^2.0.0",
     "lodash": "^3.8.0",
     "minimist": "^1.1.1",
-    "require-dir": "^0.3.0"
+    "require-dir": "^0.3.0",
+    "semver": "^4.3.4",
+    "shelljs": "^0.4.0"
   },
   "devDependencies": {
     "chai": "^2.3.0",
