--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "command line runner",
   "main": "index.js",
   "scripts": {
-    "test": "node ./node_modules/mocha/bin/mocha --reporter spec",
+    "test": "grunt test",
     "coverage": "node ./node_modules/mocha/bin/mocha --reporter mocha-istanbul",
     "watch": "node ./node_modules/mocha/bin/mocha --watch"
   },
@@ -42,6 +42,13 @@
     "chai": "^2.3.0",
     "chai-as-promised": "^5.0.0",
     "istanbul": "^0.3.13",
+    "coveralls": "^2.11.2",
+    "grunt": "~0.4.2",
+    "grunt-contrib-watch": "~0.5.3",
+    "grunt-includes": "~0.4.0",
+    "grunt-mocha-cov": "^0.3.0",
+    "grunt-mocha-istanbul": "^2.2.0",
+    "grunt-mocha-test": "^0.12.4",
     "mocha": "^2.1.0",
     "mocha-istanbul": "^0.2.0",
     "sinon": "^1.14.1",
