--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "mocha": "^2.1.0",
     "mocha-istanbul": "^0.2.0",
     "sinon": "^1.14.1",
-    "sinon-chai": "^2.7.0"
+    "sinon-chai": "^2.7.0",
+    "stripcolorcodes": "^0.1.0"
   }
 }
